--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,6 @@
 version=5.1.9.BUILD-SNAPSHOT
+org.gradle.daemon=true
+org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.parallel=true
+org.gradle.configureondemand=true
+
