--- a/settings.gradle
+++ b/settings.gradle
@@ -21,11 +21,14 @@ include "spring-webflux"
 include "spring-websocket"
 include "spring-framework-bom"
 
+include 'spring-adebug'
+
 // Exposes gradle buildSrc for IDE support
 include "buildSrc"
 rootProject.children.find{ it.name == "buildSrc" }.name = "spring-build-src"
 
-rootProject.name = "spring"
+rootProject.name = "spring 5.1.x"
 rootProject.children.each {project ->
 	project.buildFileName = "${project.name}.gradle"
 }
+
